# usfx

./: CHANGELOG.md  Cargo.toml  README.md  init_repo.sh
.github/workflows/: doc.yml  release.yml  rust.yml
benches/: distortion.rs  envelope.rs  mixer.rs  wave_type.rs
examples/: cpal.rs  music.rs  sdl2.rs
src/: envelope.rs  lib.rs  oscillator.rs
src/effects/: distortion.rs  mod.rs
