[package]
name = "usfx"
version = "0.1.3"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/usfx"
documentation = "https://docs.rs/usfx"
description = "Realtime procedurally generated sound effects"
keywords = ["sfx", "audio", "gamedev", "sound", "procedural"]
categories = ["game-development", "multimedia", "multimedia::audio", "simulation"]

[dependencies]
randomize = "3.0.1"

[dev-dependencies]
cpal = "0.11.0"
criterion = "0.3.1"
doc-comment = "0.3.3"
sdl2 = "0.33.0"
rust-music-theory = "0.1.6"
rand = "0.7.3"

[[bench]]
name = "wave_type"
harness = false

[[bench]]
name = "envelope"
harness = false

[[bench]]
name = "mixer"
harness = false

[[bench]]
name = "distortion"
harness = false
