[package]
name = "usfx"
version = "0.1.4"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/usfx"
documentation = "https://docs.rs/usfx"
description = "Realtime procedurally generated sound effects"
keywords = ["sfx", "audio", "gamedev", "sound", "procedural"]
categories = ["game-development", "multimedia", "multimedia::audio", "simulation"]

[dependencies]
randomize = "3.0.1"

[dev-dependencies]
cpal = "0.15.2"
criterion = "0.4.0"
sdl2 = { version = "0.35.2", features = ["bundled"] }
rust-music-theory = "0.2.0"
rand = "0.8.5"

[[bench]]
name = "wave_type"
harness = false

[[bench]]
name = "envelope"
harness = false

[[bench]]
name = "mixer"
harness = false

[[bench]]
name = "distortion"
harness = false
